--- a/.github/workflows/00-build-image.yaml
+++ b/.github/workflows/00-build-image.yaml
@@ -82,7 +82,7 @@ jobs:
         with:
           context: .
           file: ./dockerfiles/Dockerfile
-          push: true
+          push: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'release' }}
           tags: |
             ghcr.io/${{ github.repository }}:latest
             ghcr.io/${{ github.repository }}:${{ steps.meta.outputs.tags }}
@@ -95,6 +95,7 @@ jobs:
       # This step generates an artifact attestation for the image, which is an unforgeable statement about where and how it was built. It increases supply chain security for people who consume the image. For more information, see [Using artifact attestations to establish provenance for builds](/actions/security-guides/using-artifact-attestations-to-establish-provenance-for-builds).
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v2
+        if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'release' }}
         with:
           subject-name: ghcr.io/${{ github.repository }}
           subject-digest: ${{ steps.push.outputs.digest }}
