--- a/.github/workflows/00-build-image.yaml
+++ b/.github/workflows/00-build-image.yaml
@@ -63,6 +63,7 @@ jobs:
 
       # group: login and push to GHCR
       - name: Log in to GHCR
+        if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'release' }}
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
